added mock data for the cool page, only amanitaceae still

--- a/src/components/layout/css/Container.modules.css
+++ b/src/components/layout/css/Container.modules.css
@@ -1,5 +1,5 @@
 .container {
-    width: 1200px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -11,6 +11,7 @@
 }
 
 .start {
+    flex-wrap: wrap;
     justify-content: flex-start;
 }
 
