--- a/src/components/pages/css/Mushroom.module.css
+++ b/src/components/pages/css/Mushroom.module.css
@@ -6,18 +6,51 @@
     padding: 2em;
 }
 
-.shroom_data_container{
+.shroom_data_container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
 
-.shroom_image{
-    width: 600px;
+.shroom_image {
+    height: 600px;
+    width: 500px;
     border: 1px solid red;
+margin-bottom: 1rem;
 }
 
-.shroom_data{
-    width: 650px;
-    border: 1px solid rgb(234, 0, 255);
+.shroom_data {
+    border-radius: 30px 0px;
+    background-color: var(--shroom-bg);
+    width: 750px;
+    height: 600px;
+    color: white;
+}
+
+.mushroom_name {
+    font-size: 3rem;
+    text-align: center;
+}
+
+.shroom_item {
+    list-style-type: none;
+    font-size: 1.5rem;
+    margin-top: 1rem;
+}
+
+.mushroom_items {
+    margin-top: 2rem;
+    padding: 0 2rem;
+    height: 500px;
+}
+
+.mushroom_description {
+    margin-top: 2rem;
+    position: relative;
+    height: 250px;
+    overflow-y: scroll;
+}
+
+.mushroom_info{
+    color: black;
 }
