--- a/src/components/layout/css/LinkButton.module.css
+++ b/src/components/layout/css/LinkButton.module.css
@@ -1,5 +1,5 @@
 .btn {
-    background-color: #222;
+    background-color: var(--shroom-black);
     text-decoration: none;
     color: #fff;
     padding: 0.5em 1em;
