--- a/src/components/pages/css/Mushroom.module.css
+++ b/src/components/pages/css/Mushroom.module.css
@@ -16,9 +16,16 @@
     border-radius: 30px 0px;
     height: 600px;
     width: 500px;
-    border: 1px solid red;
     margin-bottom: 1rem;
     box-shadow: 1px 1px 5px;
+}
+
+.shroom_image img {
+    height: 100%;
+    width: 100%;
+    object-fit: none;
+    object-position: center;
+    border-radius: 30px 0px;
 }
 
 .shroom_data {
@@ -27,8 +34,12 @@
     width: 750px;
     height: 600px;
     color: white;
-    border: 1px solid #222;
-    box-shadow: 1px 1px 5px #222;
+    border: 3px solid var(--shroom-black);
+    box-shadow: 1px 1px 5px var(--shroom-black);
+}
+
+.shroom_data h1 {
+    text-shadow: 3px 3px var(--shroom-black);
 }
 
 .mushroom_name {
@@ -53,8 +64,10 @@
     position: relative;
     height: 250px;
     overflow-y: scroll;
+    text-shadow: 2px 2px var(--shroom-black);
 }
 
 .mushroom_info {
-    color: black;
+    color: #ffff;
+    text-shadow: 1px 2px var(--shroom-black);
 }
